--- a/index.html
+++ b/index.html
@@ -1255,6 +1255,16 @@
                   </div>
                 </div>
 
+                <div class="panel_1">
+                  <a href="./images/sec3_subimg61.jpg" class="pin" rel="longh">
+                    <img src="./images/sec3_subimg61.jpg" alt="원에잇(오썸머) 상세페이지이미지">
+                  </a>
+
+                  <div class="paneltxt">
+                    <a href="#"><p class="paneltxt_2">원에잇(오썸머) 상세페이지</p></a>
+                  </div>
+                </div>
+
               </div><!-- box -->
             </div>
 
@@ -2027,6 +2037,16 @@
                 <div class="panel_1">
                   <a href="./images/sec3_img21.jpg" class="pin" rel="longh">
                     <img src="./images/sec3_img21.jpg" alt="원에잇 탑이미지">
+                  </a>
+
+                  <div class="paneltxt">
+                    <a href="#"><p class="paneltxt_2">원에잇 탑이미지</p></a>
+                  </div>
+                </div>
+
+                <div class="panel_1">
+                  <a href="./images/sec3_img22.jpg" class="pin" rel="longh">
+                    <img src="./images/sec3_img22.jpg" alt="원에잇 탑이미지">
                   </a>
 
                   <div class="paneltxt">
