--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   </head>
 
-  <body>
+  <body oncontextmenu="return false">
     <!-- +++++++++++++++++++++++++++++++++++++++ 헤더- 프로필 +++++++++++++++++++++++++++++++++++++++ -->
     <header id="fix">
       <div class="fixinner">
