--- a/index.html
+++ b/index.html
@@ -1274,7 +1274,7 @@
                 </div>
 
                 <div class="panel_1">
-                  <a href="./images/sec2_plus2.jpg" class="pin" rel="longh">
+                  <a href="./images/sec2_plus2.jpg" class="pin" title="height" rel="longh">
                     <img src="./images/sec2_plus2.jpg" alt="조명소개이미지">
                   </a>
 
