--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 </div>
 
                 <div class="panel_1">
-                  <a href="./images/sec3_img3.jpg" class="pin"  rel="longh">
+                  <a href="./images/sec3_img3.jpg" class="pin" rel="longh">
                     <img src="./images/sec3_img3.jpg" alt="떡볶이광고배너이미지">
                   </a>
 
@@ -1206,6 +1206,26 @@
                 </div>
 
                 <div class="panel_1">
+                  <a href="./images/sec3_subimg62.jpg" class="pin" rel="longh">
+                    <img src="./images/sec3_subimg62.jpg" alt="원에잇 상세페이지이미지">
+                  </a>
+
+                  <div class="paneltxt">
+                    <a href="#"><p class="paneltxt_2">원에잇 상세페이지</p></a>
+                  </div>
+                </div>
+
+                <div class="panel_1">
+                  <a href="./images/sec3_subimg63.jpg" class="pin" rel="longh">
+                    <img src="./images/sec3_subimg63.jpg" alt="원에잇(오썸머) 상세페이지이미지">
+                  </a>
+
+                  <div class="paneltxt">
+                    <a href="#"><p class="paneltxt_2">원에잇(오썸머) 상세페이지</p></a>
+                  </div>
+                </div>
+
+                <div class="panel_1">
                   <a href="./images/sec3_subimg57.jpg" class="pin" rel="longh">
                     <img src="./images/sec3_subimg57.jpg" alt="원에잇(오썸머) 상세페이지이미지">
                   </a>
@@ -2037,6 +2057,16 @@
                 <div class="panel_1">
                   <a href="./images/sec3_img22.jpg" class="pin" rel="longh">
                     <img src="./images/sec3_img22.jpg" alt="원에잇 탑이미지">
+                  </a>
+
+                  <div class="paneltxt">
+                    <a href="#"><p class="paneltxt_2">원에잇 탑이미지</p></a>
+                  </div>
+                </div>
+
+                <div class="panel_1">
+                  <a href="./images/sec3_img23.jpg" class="pin" rel="longh">
+                    <img src="./images/sec3_img23.jpg" alt="원에잇 탑이미지">
                   </a>
 
                   <div class="paneltxt">
